tests/algorithms/x/Java/dynamic_programming/longest_increasing_subsequence.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden320_longest_increasing_subsequence3327273323/001/Main.java:33: error: method concat in class Main cannot be applied to given types;
        candidate = ((int[])(concat(candidate, longest_subsequence(((int[])(filtered))))));
                             ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
1 error
